--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
             <p>Below is my initial boxified wireframe sketch, which guided my design choices throughout this project.</p>
 
-            <img src="images/placeholder.png" alt="Placeholder for wireframe sketch" class="placeholder-img">
+            <img src="images/sketch.jpg" alt="Placeholder for wireframe sketch" class="placeholder-img">
         </section>
 
     </div>
